# mediconnect-ai

./: .gitignore  README.md  vercel.json
backend/: check_favicon.py  database.py  init_db.py  langgraph.json  main.py  pyproject.toml  requirements.txt  requirements_old.txt  test_favicon_header.py  vercel.json
backend/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
backend/agents/: definitions.py  utils.py
backend/graph/: swarm.py
backend/models/: state.py
backend/static/: index.html
backend/static/assets/: index-1vM1sGc9.css  index-45zwgVZF.js  index-B3awqx5V.js  index-Bm6qtlM3.css  index-By6GU7WM.js  index-Cy2YQvZz.js  index-DMpsRlul.js  index-GZoWiY5Z.js  index-WwjDXrZc.css
backend/tools/: calendar_tool.py  email_tool.py  medical_tools.py  ocr_tool.py  ticket_tool.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatInterface.jsx  GraphVisualization.jsx
