[project]
name = "healthcare-agent"
version = "0.1.0"
description = "Healthcare Agent Swarm Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.117.1",
    "langchain>=0.3.0",
    "langgraph==1.0.3",
    "langgraph-swarm==0.0.15",
    "langchain-groq>=0.2.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.20",
    "websockets>=12.0",
    "langchain-sqlalchemy>=0.0.11",
    "sqlalchemy-sqlitecloud>=0.0.11",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["."]
